# workalove_challenge

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  config.py  docker-compose.yaml  manage.py  pyproject.toml
src/api/: settings.py  urls.py
src/api/chef_app/: apps.py  models.py  repository.py  router.py  serializers.py  views.py
src/api/chef_app/migrations/: 0001_initial.py  0002_chefmodel_created_at_chefmodel_updated_at.py
src/api/chef_app/tests/: test_repository.py  test_serializers.py  test_views.py
src/api/recipe_app/: apps.py  models.py  repository.py  router.py  serializers.py  views.py
src/api/recipe_app/migrations/: 0001_initial.py  0002_recipemodel_description.py
src/api/recipe_app/tests/: test_repository.py  test_serializers.py  test_views.py
src/core/chef/application/use_cases/: create_chef.py  exceptions.py
src/core/chef/domain/: chef.py  chef_repository.py
src/core/chef/tests/application/use_cases/: test_create_chef.py
src/core/chef/tests/domain/: test_chef.py
src/core/recipe/application/use_cases/: create_recipe.py  delete_recipe.py  exceptions.py  list_recipe_by_chef.py  search_recipe.py  update_recipe.py
src/core/recipe/domain/: recipe.py  recipe_repository.py
src/core/recipe/tests/application/use_cases/: test_create_recipe.py  test_delete_recipe.py  test_list_recipe_by_chef.py  test_search_recipe.py  test_update_recipe.py
src/core/recipe/tests/domain/: test_recipe.py
src/core/shared/domain/: entity.py  notification.py
